--- a/style/estilo.css
+++ b/style/estilo.css
@@ -1,9 +1,16 @@
-:root{
+
+;/::root{
     --cor-de-fundo:#EBECEE;
     --cor-branca:#FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: “Poppins”;
     }
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
     }
 .cabeçalho{
         background-color: var(--cor-branca);
@@ -29,11 +36,32 @@ body{
 .container__imagem{
     padding: 1em;
 }
-.lista-menu {
+.lista-menu{
     display: none;
     position: absolute;
     top: 100%;
-    }
+    width: 60vw;
+}
 .container__botao:checked ~ .lista-menu {
-        display: block;
+    display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item {
+padding: 1em;
+background-color: var(--branco);
+}
+.lista-menu__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+}
+.container__botao {
+    display: none;
 }
